examples/test/testpolicy6860.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6860
  namespace: namespace133
spec:
  podSelector:
    matchLabels:
      key18: value24
      key12: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value45
          key25: value46
      podSelector:
        matchLabels:
          key12: value15
          key2: value37
          key30: value41
